--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,73 @@
+* {
+  box-sizing: border-box;
+}
 body {
-  background-color: #808080;
+  margin: 0;
+  padding: 0;
+  font-family: 'Epilogue', sans-serif;
+  color: #696969;
+  background-color: #fafafa;
+}
+h1,
+p,
+picture {
+  margin: 0;
+}
+img {
+  max-width: 100%;
+}
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: 0;
+}
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  padding: 1em;
+}
+.navbar__menu {
+  border: none;
+  background-color: transparent;
+}
+.navbar__container {
+  display: none;
+}
+.hero {
+  text-align: center;
+  display: grid;
+  gap: 3em;
+}
+.hero__section {
+  display: grid;
+  gap: 1em;
+  justify-items: center;
+}
+.hero__title {
+  color: #141414;
+  font-size: 2.5rem;
+}
+.hero__description {
+  font-size: 1.3rem;
+  max-width: 40ch;
+  margin-inline: auto;
+  line-height: 1.5;
+}
+.hero__button {
+  background-color: #141414;
+  border-radius: 15px;
+  display: block;
+  text-decoration: none;
+  color: #fafafa;
+  font-size: 1.2rem;
+  padding: 1em 2em;
+  margin-block: 1em;
+  width: max-content;
+}
+.hero__footer {
+  margin-block: 1em;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
