--- a/styles/main.styl
+++ b/styles/main.styl
@@ -1,2 +1,25 @@
+@require '_variables'
+
+*
+  box-sizing: border-box
+
 body
-  background-color: gray
+  margin: 0
+  padding: 0
+  font-family: family;
+  color: main
+  background-color: light
+
+h1,p,picture
+  margin: 0
+
+img 
+  max-width: 100%
+
+ul
+  margin: 0
+  padding: 0
+  list-style: 0
+
+@require 'navbar'
+@require 'hero'
