--- a/styles/main.styl
+++ b/styles/main.styl
@@ -19,10 +19,13 @@ img
 ul
   margin: 0
   padding: 0
-  list-style: 0
+  list-style: none
 
 @require 'navbar'
 @require 'hero'
 
 .hidden
   display: none
+
+.turn-up
+  transform: rotate(180deg)
