--- a/styles/navbar.styl
+++ b/styles/navbar.styl
@@ -23,9 +23,12 @@
     display: flex
     flex-direction: column
 
-    ul
-      list-style: none
-  
+  &__item--sublist
+    padding-block-start: 1em
+    padding-inline-start: 2em
+    display: grid
+    gap: 1em
+
   &--main
     display: grid
     gap: 1em
@@ -49,11 +52,7 @@
     margin-inline-start: .5em
 
   &__item
-    ul
-      padding-block-start: 1em
-      padding-inline-start: 2em
-      display: grid
-      gap: 1em
+
     &--todo
       list-style: url('../images/icon-todo.svg')
     &--calendar
