--- a/styles/navbar.styl
+++ b/styles/navbar.styl
@@ -51,7 +51,8 @@
     margin-inline-start: .5em
 
   &__item
-
+    cursor: pointer
+    
     &--todo
       list-style: url('../images/icon-todo.svg')
     &--calendar
@@ -63,6 +64,10 @@
     
     &--register
       border: 2px solid main
+      &:hover
+        border-color: dark
+    &:hover
+        color: dark
 
 @media (min-width: 800px)
   .navbar
@@ -79,6 +84,7 @@
     &__title
       display: flex;
       align-items: center;
+      padding-block: 1em;
     
     &__content
       background-color: transparent
@@ -99,8 +105,12 @@
       margin: 0
       display: flex
       align-items: center
+    
     &__item
       position: relative
+      &:hover
+        color: dark
+      
     &__item--sublist
       position: absolute
       right: 0
